# GameLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Todo.md  checkentities.sh  imgui.ini
assets/: editor.json  res.json  (+4 more)
examples/: CMakeLists.txt
examples/assets/: bgmap.json  cam.json  game.json  map.json  map2.json  player.json  sprites.json
examples/platformer/: MainState.cpp  MainState.hpp  Player.cpp  Player.hpp
examples/scene_tilemap/: MainState.cpp  MainState.hpp  main.cpp
examples/tilewalker/: MainState.cpp  MainState.hpp
extlib/: CMakeLists.txt
extlib/imguifilesystem/: imguifilesystem.h
extlib/jsoncpp/: CMakeLists.txt
src/engine/: CMakeLists.txt  Camera.cpp  Game.cpp
src/engine/event/: EventManager.cpp  KeyEvent.cpp  MouseEvent.cpp
src/engine/tile/: FloatingTile.cpp  ObjectSet.cpp  Scene.cpp  Tile.cpp  TileSet.cpp
src/engine/tile/tilemap/: FloatingTileMap.cpp  Layer.cpp  StaticTileMap.cpp  TileMap.cpp
src/engine/utils/: JsonObject.cpp  SpriteBatch.cpp
src/gamelib/: CMakeLists.txt  Camera.cpp  Engine.cpp  FreeCam.cpp  Game.cpp  Scene.cpp  Sprite.cpp  SpriteSet.cpp  System.cpp  export.cpp
src/gamelib/Scene/: Scene.cpp  TilemapAdapter.cpp  VimCam.cpp
src/gamelib/collision/: AABBCollision.cpp  CollisionSystem.cpp  GroupTransform.cpp  Polygon.cpp  Transformable.cpp  TriangleStrip.cpp
src/gamelib/component/: Entity.cpp  UpdateComponent.cpp
src/gamelib/component/subsystem/: UpdateSystem.cpp
src/gamelib/components/: CameraComponent.cpp  CollisionComponent.cpp  NewRenderComponent.cpp  RenderComponent.cpp  UpdateComponent.cpp
src/gamelib/components/editor/: BrushComponent.cpp  LineBrushComponent.cpp  PolygonBrushComponent.cpp
src/gamelib/components/geometry/: AABB.cpp  AABBMask.cpp  PixelCollision.cpp  Polygon.cpp
src/gamelib/components/rendering/: MeshRenderer.cpp  PolygonShape.cpp  SpriteComponent.cpp
src/gamelib/components/update/: ActorComponent.cpp  AnimationComponent.cpp  CameraTracker.cpp  QController.cpp  QPhysics.cpp  SpriteComponent.cpp
src/gamelib/core/: Camera.cpp  FreeCam.cpp  Game.cpp
src/gamelib/core/ecs/: CollisionComponent.cpp  Component.cpp  Entity.cpp  EntityFactory.cpp  EntityManager.cpp  RenderComponent.cpp  UpdateComponent.cpp  serialization.cpp
src/gamelib/core/event/: EventHandle.cpp  EventManager.cpp
src/gamelib/core/geometry/: CollisionSystem.cpp  GroupTransform.cpp  MatrixPolygon.cpp  Transformable.cpp  TransformableAABB.cpp
src/gamelib/core/input/: InputSystem.cpp
src/gamelib/core/movement/: Acceleration.cpp
src/gamelib/core/rendering/: Camera.cpp  CameraSystem.cpp  FreeCam.cpp  Layer.cpp  RenderStructs.cpp  RenderSystem.cpp  Scene.cpp  SceneData.cpp  SceneObject.cpp
src/gamelib/core/res/: EntityConfigResource.cpp  EntityResource.cpp  JsonResource.cpp  JsonSerializer.cpp  ResourceManager.cpp  SoundResource.cpp  SpriteResource.cpp  TextureResource.cpp  resources.cpp
src/gamelib/core/sprite/: AnimatedSprite.cpp  SpriteData.cpp  SpriteSet.cpp
src/gamelib/core/update/: Updatable.cpp  UpdateSystem.cpp
src/gamelib/ecs/: CollisionComponent.cpp  Component.cpp  Entity.cpp  EntityFactory.cpp  EntityManager.cpp  RenderComponent.cpp  UpdateComponent.cpp
src/gamelib/editor/: CMakeLists.txt  Editor.cpp  EditorShared.cpp  EntityDesigner.cpp  main.cpp
src/gamelib/editor/components/: BrushComponent.cpp  PolygonShape.cpp
src/gamelib/editor/editor/: Editor.cpp  EditorShared.cpp  EntityDesigner.cpp
src/gamelib/editor/editor/tools/: BrushTool.cpp  EntityTool.cpp  SelectTool.cpp  SpriteTool.cpp  ToolUtils.cpp  VertexTool.cpp
src/gamelib/editor/events/: OnSelect.cpp
src/gamelib/editor/tools/: BrushTool.cpp  EntityTool.cpp  SelectTool.cpp  SpriteTool.cpp  ToolUtils.cpp  VertexTool.cpp
src/gamelib/editor/ui/: CameraUI.cpp  EntityList.cpp  FileDialog.cpp  GlobalGameConfig.cpp  Grid.cpp  JsonView.cpp  LayerUI.cpp  Overlay.cpp  ResourceViewer.cpp  inputs.cpp  resources.cpp
src/gamelib/event/: EventManager.cpp  KeyEvent.cpp  MouseEvent.cpp
src/gamelib/events/: CameraEvents.cpp  ResourceReloadEvent.cpp
src/gamelib/geometry/: AABB.cpp  CollisionSystem.cpp  GroupTransform.cpp  Polygon.cpp  Transformable.cpp
src/gamelib/imgui/: FileDialog.cpp  buttons.cpp  iconfont.cpp  inputs.cpp  resources.cpp
src/gamelib/json/: JsonSerializer.cpp  json-file.cpp  json-rendering.cpp  json-resources.cpp  json-transformable.cpp  json-utils.cpp  json-vector.cpp
src/gamelib/legacy/: TileWalker.cpp
src/gamelib/legacy/Scene/: Scene.cpp  TilemapAdapter.cpp  VimCam.cpp
src/gamelib/legacy/tile/: StaticRenderTilemap.cpp
src/gamelib/main/: checkentcfg.cpp  editormain.cpp
src/gamelib/misc/: Acceleration.cpp
src/gamelib/movement/: Acceleration.cpp  QController.cpp  QPhysics.cpp  TileWalker.cpp
src/gamelib/properties/: PropComponent.cpp  PropDummy.cpp  PropResource.cpp  Property.cpp  PropertyContainer.cpp  PropertyHandle.cpp  basictypes.cpp
src/gamelib/rendering/: Layer.cpp  Scene.cpp  SceneData.cpp  SceneObject.cpp
src/gamelib/res/: EntityConfigResource.cpp  JsonResource.cpp  JsonSerializer.cpp  ResourceManager.cpp  TextureResource.cpp  predefs.cpp  resources.cpp
src/gamelib/sprite/: AnimatedSprite.cpp  SpriteData.cpp  SpriteSet.cpp
src/gamelib/tile/: FloatingTile.cpp  Scene.cpp  StaticRenderTilemap.cpp  Tile.cpp  TileScene.cpp  TileSet.cpp
src/gamelib/tile/tilemap/: FloatingTileMap.cpp  Layer.cpp  StaticTileMap.cpp  TileMap.cpp
src/gamelib/update/: Updatable.cpp  UpdateSystem.cpp
src/gamelib/utils/: DebugGui.cpp  JsonObject.cpp  LifetimeTracker.cpp  Property.cpp  Signal.cpp  SpriteBatch.cpp  Timer.cpp  aspectratio.cpp  json.cpp  string.cpp
test/: CMakeLists.txt  batchallocator.cpp  callbackhandler.cpp  ecs.cpp  entityfactory.cpp  entityserialization.cpp  factory.cpp  idcounter.cpp  imguitest.cpp  json.cpp  lifetime.cpp  log.cpp  nametag.cpp  objectset.cpp  properties.cpp  rendersystem.cpp  resmgr.cpp  signal.cpp  slotmap.cpp  stablevector_test.cpp  static_dataset_tilemap.cpp  statictilemap.cpp  tilemap_collider.cpp  updatesystem.cpp
test/legacy/: entity_component.cpp  tilemap_collider.cpp
(+354 files in other folders)
