macro(gen_test TESTNAME SOURCE)
    add_executable(${TESTNAME} ${SOURCE} ${ARGN})
    add_test(NAME ${TESTNAME} COMMAND ${TESTNAME} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
endmacro()

macro(gen_test_full TESTNAME SOURCE)
    gen_test(${TESTNAME} ${SOURCE} ${ARGN})
    target_link_libraries(${TESTNAME} gamelib)
endmacro()

macro(gen_test_extlib TESTNAME SOURCE)
    gen_test(${TESTNAME} ${SOURCE} ${ARGN})
    target_link_libraries(${TESTNAME} cppmath jsoncpp imgui)
endmacro()


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/test)
gen_test(factorytest factory.cpp)
gen_test(logtest log.cpp)
gen_test(stablevector_test stablevector_test.cpp)
gen_test(slotmap slotmap.cpp)
gen_test(batchallocator batchallocator.cpp)
gen_test_full(properties properties.cpp)
gen_test_full(json json.cpp)
gen_test_full(resmgr resmgr.cpp)
gen_test_full(ecs ecs.cpp)
gen_test_full(entityfactory entityfactory.cpp)
gen_test_full(entityserialization entityserialization.cpp)
gen_test_full(idcounter idcounter.cpp)

if (GAMELIB_BUILD_TOOLS)
    find_program(BASH_PROGRAM bash)
    if (BASH_PROGRAM)
        add_test(checkentities ${BASH_PROGRAM} ${PROJECT_SOURCE_DIR}/checkentities.sh)
    endif()
endif()
